# resident

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: commit-lint.yaml  lint.yaml
docker/: psql-dev-docker-compose.yaml
src/: base.py  env.py  scrape.py
src/connectors/: db.py
src/database/: base.py  model.py
src/database/migrations/: env.py
src/database/migrations/versions/: 4cf6a3f604ad_add_betway_table_to_sqlite_db.py  e35de249f203_.py
src/typing/: base.py
